# simple-tinyllama-gui

./: .gitignore  Cargo.toml
src/: main.rs  model_manager.rs  model_runner.rs  tabs.rs
src/model_runner/: token_output_stream.rs
src/tabs/: chat.rs  settings.rs  settings_tab.rs
