[package]
name = "simple-tinyllama-gui"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
iced = { version = "0.12.1", features = [] }
# iced_aw = { version = "0.8.0", features = [ "tabs" ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = [ "tabs" ] }
llm = "0.1.0"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[profile.dev.package.ggml-sys]
opt-level = 3
