[package]
name = "simple-tinyllama-gui"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.1" }
dirs = "5.0.1"
iced = { version = "0.12.1", features = [ "tokio" ] }
# iced_aw = { version = "0.8.0", features = [ "tabs" ] }
iced_aw = { git = "https://github.com/iced-rs/iced_aw", features = [ "tabs" ] }
nd-util = { git = "https://github.com/nathaniel-daniel/nd-util-rs", version = "0.0.0" }
reqwest = { version = "0.12.4", features = [ "rustls-tls", "http2" ], default-features = false }
tokenizers = "0.19.1"
tokio = { version = "1.37.0", features = [ "rt", "fs" ] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
